feat: Implement contact profile, search functionality, and enhance user experience

--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -12,7 +12,8 @@
       <div class="card h-100 shadow-sm border-0">
         <img
         src="{% static 'img/avatar.png' %}"
-          class="card-img-top img-fluid rounded-top"
+          class="card-img-top rounded-top"
+          style="height: 200px; object-fit: cover; object-position: center; width: auto;"
           alt="{{ profile.name }}"
         />
         <div class="card-body d-flex flex-column">
