--- a/form_mtaani/templates/form_mtaani/index.html
+++ b/form_mtaani/templates/form_mtaani/index.html
@@ -1,32 +1,57 @@
-{% extends 'wera/base.html' %} 
-{% block content %}
+{% extends 'wera/base.html' %} {% block content %}
 
 <div class="container">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Form Mtaani</h1>
-    <a href="{% url 'form_mtaani_create' %}" class="btn btn-primary">Know about a form?</a>
+    <a href="{% url 'form_mtaani_create' %}" class="btn btn-primary"
+      >Know about a form?</a
+    >
   </div>
 
-  <p class="lead mb-4 text-center">Share about any job findings...</p>
-
   <div class="row g-4">
-    <div class="col-12">
-      <div class="card w-75 mx-auto shadow-sm">
-        <div class="card-header bg-primary text-white">
-          Marketing | Nairobi
+    
+    {% if form_mtaanis %} {% for j in form_mtaanis %}
+    <div class="col-lg-12 mb-4">
+      <div
+        class="single_jobs white-bg d-flex justify-content-between align-items-center shadow-sm p-4 rounded"
+      >
+        <div class="jobs_left d-flex align-items-center">
+          <div class="jobs_content">
+            <a href="{% url 'form_mtaani_detail' j.pk %}">
+              <h4 class="text-primary">{{ j.form }}</h4>
+            </a>
+            <div class="links_locat d-flex align-items-center mt-2">
+              <div class="location me-4">
+                <p class="m-0">
+                  <i class="bi bi-geo-alt"></i> {{ j.location }}
+                </p>
+              </div>
+              <div class="category">
+                <p class="m-0">
+                  <i class="bi bi-tags"></i> {{ j.category.name }}
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="card-body">
-          <p class="card-text">
-            With supporting text below as a natural lead-in to additional content.
-          </p>
+        <div class="jobs_right d-flex align-items-center">
+          <div class="apply_now me-3">
+            <a class="heart_mark" href="#"> <i class="bi bi-heart"></i> </a>
+          </div>
+          <div class="date">
+            <p class="text-muted">{{ j.created_at }}</p>
+          </div>
         </div>
       </div>
     </div>
+    {% endfor %} {% else %}
+    <p class="lead mb-4 text-center">Share about any job findings...</p>
+    {% endif %}
   </div>
 
-  <div class="text-center pt-3">
+  <!-- <div class="text-center p-3">
     <button class="btn btn-outline-primary">Load more...</button>
-  </div>
+  </div> -->
 </div>
 
 {% endblock %}
