--- a/wera/templates/wera/create.html
+++ b/wera/templates/wera/create.html
@@ -1,48 +1,86 @@
 {% extends 'wera/base.html' %} {% block content %}
 
-<div class="d-flex align-items-center justify-content-center">
-  <div class="container bg-white p-4 shadow rounded" style="max-width: 500px">
-    <h2 class="text-center mb-4">
-      Posting a Wera with us is free, and you can post as many Wera postings as
-      you want
-    </h2>
-    <form method="POST" action="{% url 'wera_create' %}" novalidate>
-      {% csrf_token %}
-      <div class="mb-3">
-        <label for="title" class="form-label">Wera Title</label>
-        <input type="text" class="form-control" name="title" id="title" />
+<div class="d-flex container">
+  <div class="row w-100">
+    <div class="col-md-6 p-4">
+      <h2 class="text-center mb-4">Posting a Wera with us is free</h2>
+      <form method="POST" action="{% url 'wera_create' %}" novalidate>
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="title" class="form-label">Wera Title</label>
+          <input type="text" class="form-control" name="title" id="title" />
+        </div>
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea
+            class="form-control"
+            name="description"
+            id="description"
+            rows="5"
+          ></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="location" class="form-label">Location</label>
+          <select class="form-select" name="location" id="location">
+            <option value="">Select Location</option>
+            {% for l in locations %}
+            <option value="{{ l.id }}">{{ l.name }}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="category" class="form-label">Category</label>
+          <select class="form-select" name="category" id="category">
+            <option value="">Select Category</option>
+            {% for c in categories %}
+            <option value="{{ c.id }}">{{ c.name }}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="mt-3">
+          <button type="submit" class="btn btn-primary w-100">Post Wera</button>
+        </div>
+      </form>
+    </div>
+
+    <div class="col-md-6 p-4">
+      <h2 class="text-center mb-4">Weras</h2>
+      {% if weras %} {% for w in weras %}
+      <div class="col-lg-12 mb-4">
+        <div
+          class="single_jobs white-bg d-flex justify-content-between align-items-center shadow-sm p-4 rounded"
+        >
+          <div class="jobs_left d-flex align-items-center">
+            <div class="jobs_content">
+              <a href="{% url 'form_mtaani_detail' w.pk %}">
+                <h4 class="text-primary">{{ w.title }}</h4>
+              </a>
+              <div class="links_locat d-flex align-items-center mt-2">
+                <div class="location me-4">
+                  <p class="m-0">
+                    <i class="bi bi-geo-alt"></i> {{ w.location }}
+                  </p>
+                </div>
+                <div class="category">
+                  <p class="m-0"><i class="bi bi-tags"></i> {{ w.category }}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="jobs_right d-flex align-items-center">
+            <div class="apply_now me-3">
+              <a class="heart_mark" href="#"> <i class="bi bi-heart"></i> </a>
+            </div>
+            <div class="date">
+              <p class="text-muted">{{ w.created_at }}</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="mb-3">
-        <label for="description" class="form-label">Description</label>
-        <textarea
-          class="form-control"
-          name="description"
-          id="description"
-          rows="5"
-        ></textarea>
-      </div>
-      <div class="mb-3">
-        <label for="location" class="form-label">Location</label>
-        <select class="form-select" name="location" id="location">
-          <option value="">Select Location</option>
-          {% for l in locations %}
-          <option value="{{ l.id }}">{{ l.name }}</option>
-          {% endfor %}
-        </select>
-      </div>
-      <div class="mb-3">
-        <label for="category" class="form-label">Category</label>
-        <select class="form-select" name="category" id="category">
-          <option value="">Select Category</option>
-          {% for c in categories %}
-          <option value="{{ c.id }}">{{ c.name }}</option>
-          {% endfor %}
-        </select>
-      </div>
-      <div class="mt-3">
-        <button type="submit" class="btn btn-primary w-100">Post Wera</button>
-      </div>
-    </form>
+      {% endfor %} {% else %}
+      <p>No Wera found</p>
+      {% endif %}
+    </div>
   </div>
 </div>
 
