--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -1,83 +1,53 @@
 {% extends 'wera/base.html' %} {% load static %} {% block content %}
 
-<div class="category_area py-5">
+<div class="category_area pt-5">
   <div class="">
     <div class="row cat_search mb-4">
       <!-- <form action="{% url 'search_wera' %}" method="get">
         {% csrf_token %} -->
-        <div class="col-lg-3 col-md-4 mb-3">
-          <div class="single_input">
-            <input
-              type="text"
-              id="query"
-              name="query"
-              class="form-control"
-              placeholder="Search Keyword"
-            />
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mb-3">
-          <div class="single_input">
-            <select class="form-select">
-              <option data-display="Location">Location</option>
-              {% for l in locations %}
-              <option value="{{ l.id }}" id="location" name="location">
-                {{ l.name }}
-              </option>
-              {% endfor %}
-            </select>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mb-3">
-          <div class="single_input">
-            <select class="form-select">
-              <option data-display="Category">Category</option>
-              {% for c in categories %}
-              <option value="{{ c.id }}" id="category" name="category">
-                {{ c.name }}
-              </option>
-              {% endfor %}
-            </select>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-12 mb-3">
-          <div class="">
-            <button type="submit" class="btn btn-primary w-100">
-              <i class="bi bi-search-heart"></i> Search
-            </button>
-          </div>
-        </div>
-      <!-- </form> -->
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="popular_search d-flex align-items-center">
-          <span class="fw-bold me-2">Popular Search:</span>
-          <ul class="list-unstyled d-flex flex-wrap">
-            <li>
-              <a href="#" class="text-decoration-none me-3"
-                >design & creative</a
-              >
-            </li>
-            <li><a href="#" class="text-decoration-none me-3">marketing</a></li>
-            <li>
-              <a href="#" class="text-decoration-none me-3">administration</a>
-            </li>
-            <li>
-              <a href="#" class="text-decoration-none me-3"
-                >teaching & education</a
-              >
-            </li>
-            <li>
-              <a href="#" class="text-decoration-none me-3">engineering</a>
-            </li>
-            <li>
-              <a href="#" class="text-decoration-none me-3">software & web</a>
-            </li>
-            <li><a href="#" class="text-decoration-none">telemarketing</a></li>
-          </ul>
+      <div class="col-lg-9 col-md-4 mb-3">
+        <div class="single_input">
+          <input
+            type="text"
+            id="query"
+            name="query"
+            class="form-control"
+            placeholder="Search Keyword"
+          />
         </div>
       </div>
+      <!-- <div class="col-lg-3 col-md-4 mb-3">
+        <div class="single_input">
+          <select class="form-select">
+            <option data-display="Location">Location</option>
+            {% for l in locations %}
+            <option value="{{ l.id }}" id="location" name="location">
+              {{ l.name }}
+            </option>
+            {% endfor %}
+          </select>
+        </div>
+      </div> -->
+      <!-- <div class="col-lg-3 col-md-4 mb-3">
+        <div class="single_input">
+          <select class="form-select">
+            <option data-display="Category">Category</option>
+            {% for c in categories %}
+            <option value="{{ c.id }}" id="category" name="category">
+              {{ c.name }}
+            </option>
+            {% endfor %}
+          </select>
+        </div>
+      </div> -->
+      <div class="col-lg-3 col-md-12 mb-3">
+        <div class="">
+          <button type="submit" class="btn btn-primary w-100">
+            <i class="bi bi-search-heart"></i> Search
+          </button>
+        </div>
+      </div>
+      <!-- </form> -->
     </div>
   </div>
 </div>
