--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nobile:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -52,7 +52,7 @@
       /* Large Mobile :480px. */
 
       body {
-        font-family: "Ubuntu Sans", serif !important;
+        font-family: "Nobile", serif !important;
         font-optical-sizing: auto;
         font-weight: normal;
         font-style: normal;
@@ -3332,7 +3332,7 @@
       </div>
     </nav>
     <div class="container min-vh-100">{% block content %} {% endblock %}</div>
-    <footer class="footer bg-dark text-white">
+    <footer class="footer bg-dark text-white d-none d-lg-block">
       <div class="footer_top">
         <div class="container">
           <div class="row">
