--- a/form_mtaani/templates/form_mtaani/index.html
+++ b/form_mtaani/templates/form_mtaani/index.html
@@ -1,6 +1,6 @@
 {% extends 'wera/base.html' %} {% block content %}
 
-<div class="container">
+<div class="container pt-2">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Form Mtaani</h1>
     <a href="{% url 'form_mtaani_create' %}" class="btn btn-primary"
