feat: add google analytics

--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -3209,7 +3209,20 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-TNP5GVGSDM"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
+    gtag("config", "G-TNP5GVGSDM");
+  </script>
   <body>
     <!-- header-start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-none d-lg-flex">
