--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -1,11 +1,13 @@
 {% load static %} {% load socialaccount %}
+
 <!DOCTYPE html>
 <html class="no-js" lang="en">
+  {% load pwa %} {% progressive_web_app_meta %}
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Wera</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Wera is a social job board" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,8 +25,24 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-
-    <!-- <link rel="manifest" href="site.webmanifest"> -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="{% static 'img/apple-touch-icon.png' %}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="{% static 'img/favicon-32x32.png' %}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="{% static 'img/favicon-16x16.png' %}"
+    />
+    <link rel="manifest" href="{% static 'img/site.webmanifest' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <style>
       .flex-center-start {
@@ -3289,7 +3307,7 @@
             <li class="nav-item">
               <a
                 href="{% url 'wera_create' %}"
-                class="nav-link btn btn-btn-outline-light"
+                class="nav-link btn btn-light text-dark btn-outline-light"
               >
                 Post Wera
               </a>
