--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -3323,25 +3323,25 @@
           <li class="nav-item">
             <a href="{% url 'home' %}" class="nav-link text-center">
               <i class="bi bi-house-door"></i>
-              <span class="d-block">Home</span>
+              <span class="d-block"><small>Home</small></span>
             </a>
           </li>
           <li class="nav-item">
             <a href="{% url 'form_mtaani' %}" class="nav-link text-center">
               <i class="bi bi-person-workspace"></i>
-              <span class="d-block">Form Mtaani</span>
+              <span class="d-block"><small>Form Mtaani</small></span>
             </a>
           </li>
           <li class="nav-item">
             <a href="{% url 'wera_create' %}" class="nav-link text-center">
               <i class="bi bi-plus-circle"></i>
-              <span class="d-block">Post Wera</span>
+              <span class="d-block"><small>Post Wera</small></span>
             </a>
           </li>
           <li class="nav-item">
             <a href="{% url 'contacts' %}" class="nav-link text-center">
               <i class="bi bi-telephone"></i>
-              <span class="d-block">Contacts</span>
+              <span class="d-block"><small>Contacts</small></span>
             </a>
           </li>
           {% if user.is_authenticated %}
