--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -74,7 +74,7 @@
         font-optical-sizing: auto;
         font-weight: normal;
         font-style: normal;
-        font-variation-settings: "wdth" 100;
+        font-variation-settings: "width" 100;
         background-color: #ffffff;
       }
 
