--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container  pt-3">
-  <h1 class="text-center mb-4">Find a Potential Profile for Your Task/Job</h1>
+  <p class="text-center mb-4 lead">Find a Potential Profile for Your Task/Job</p>
   
   <div class="row g-4">
     <!-- Profile Card -->
@@ -11,9 +11,8 @@
     <div class="col-md-6 col-lg-4">
       <div class="card h-100 shadow-sm border-0">
         <img
-        src="{% static 'img/avatar.png' %}"
-          class="card-img-top rounded-top"
-          style="height: 200px; object-fit: cover; object-position: center; width: auto;"
+        src="{% static 'images/avatar.png' %}"
+          class="card-img-top rounded-circle"
           alt="{{ profile.name }}"
         />
         <div class="card-body d-flex flex-column">
@@ -23,7 +22,7 @@
           </p>
           <div class="mt-auto text-center">
             <a href="tel:{{profile.phone}}" class="btn btn-primary">
-              Contact Me
+              <i class="bi bi-telephone-outbound-fill"></i> Contact Me
             </a>
           </div>
         </div>
