--- a/form_mtaani/templates/form_mtaani/index.html
+++ b/form_mtaani/templates/form_mtaani/index.html
@@ -2,9 +2,9 @@
 
 <div class="container pt-2">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1>Form Mtaani</h1>
+    <p class="lead">Form Mtaani</p>
     <a href="{% url 'form_mtaani_create' %}" class="btn btn-primary"
-      >Know about a form?</a
+      >Toa form <i class="bi bi-arrow-right-short"></i></a
     >
   </div>
 
