--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -2,8 +2,9 @@
 
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-  {% load pwa %} {% progressive_web_app_meta %}
+  {% load pwa %}
   <head>
+    {% progressive_web_app_meta %}
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Wera</title>
@@ -28,21 +29,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="{% static 'img/apple-touch-icon.png' %}"
+      href="{% static 'images/apple-touch-icon.png' %}"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="{% static 'img/favicon-32x32.png' %}"
+      href="{% static 'images/favicon-32x32.png' %}"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="{% static 'img/favicon-16x16.png' %}"
+      href="{% static 'images/favicon-16x16.png' %}"
     />
-    <link rel="manifest" href="{% static 'img/site.webmanifest' %}" />
+    <link rel="manifest" href="{% static 'images/site.webmanifest' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <style>
       .flex-center-start {
@@ -2123,7 +2124,7 @@
       }
 
       .job_listing_area .job_lists {
-        margin-top: 50px;
+        margin-top: 20px;
       }
 
       .job_listing_area .job_lists .single_jobs {
@@ -3246,6 +3247,15 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-none d-lg-flex">
       <div class="container">
         <a href="{% url 'home' %}" class="navbar-brand">Wera</a>
+        <form class="d-flex">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-primary" type="submit"><i class="bi bi-search"></i> </button>
+        </form>
         <button
           class="navbar-toggler"
           type="button"
@@ -3307,9 +3317,9 @@
             <li class="nav-item">
               <a
                 href="{% url 'wera_create' %}"
-                class="nav-link btn btn-light text-dark btn-outline-light"
+                class="nav-link btn text-white btn-dark btn-outline-light"
               >
-                Post Wera
+              <i class="bi bi-plus-circle"></i> Post Wera
               </a>
             </li>
           </ul>
@@ -3335,7 +3345,7 @@
           <li class="nav-item">
             <a href="{% url 'wera_create' %}" class="nav-link text-center">
               <i class="bi bi-plus-circle"></i>
-              <span class="d-block"><small>Post Wera</small></span>
+              <span class="d-block"><small>Wera</small></span>
             </a>
           </li>
           <li class="nav-item">
@@ -3362,7 +3372,17 @@
         </ul>
       </div>
     </nav>
-    <div class="container min-vh-100">{% block content %} {% endblock %}</div>
+    <div class="container min-vh-100">
+      {% if messages %} {% for message in messages %}
+      <div class="pt-2">
+        <div class="alert alert-info">{{ message }}</div>
+      </div>
+      {% endfor %} {% endif %} {% if error %}
+      <div class="pt-2">
+        <div class="alert alert-danger">{{ error }}</div>
+      </div>
+      {% endif %} {% block content %} {% endblock %}
+    </div>
     <footer class="footer bg-dark text-white d-none d-lg-block">
       <div class="footer_top">
         <div class="container">
@@ -3428,10 +3448,13 @@
                 <form
                   action="{% url 'newsletter_create' %}"
                   class="form-inline"
+                  method="post"
                 >
+                  {% csrf_token %}
                   <div class="form-group">
                     <input
                       type="text"
+                      name="email"
                       placeholder="Enter your mail"
                       class="form-control mb-2"
                     />
