--- a/wera/templates/wera/create.html
+++ b/wera/templates/wera/create.html
@@ -3,12 +3,12 @@
 <div class="d-flex container">
   <div class="row w-100">
     <div class="col-md-6 p-4">
-      <h2 class="text-center mb-4">Posting a Wera with us is free</h2>
-      <form method="POST" action="{% url 'wera_create' %}" novalidate>
+      <p class="text-center mb-4 lead">Posting a Wera with us is free</p>
+      <form method="POST" action="{% url 'wera_create' %}"  enctype="multipart/form-data">
         {% csrf_token %}
         <div class="mb-3">
           <label for="title" class="form-label">Wera Title</label>
-          <input type="text" class="form-control" name="title" id="title" />
+          <input type="text" class="form-control" name="title" id="title" required />
         </div>
         <div class="mb-3">
           <label for="description" class="form-label">Description</label>
@@ -17,11 +17,12 @@
             name="description"
             id="description"
             rows="5"
+            required
           ></textarea>
         </div>
         <div class="mb-3">
           <label for="location" class="form-label">Location</label>
-          <select class="form-select" name="location" id="location">
+          <select class="form-select" name="location" id="location" required>
             <option value="">Select Location</option>
             {% for l in locations %}
             <option value="{{ l.id }}">{{ l.name }}</option>
@@ -30,12 +31,16 @@
         </div>
         <div class="mb-3">
           <label for="category" class="form-label">Category</label>
-          <select class="form-select" name="category" id="category">
+          <select class="form-select" name="category" id="category" required>
             <option value="">Select Category</option>
             {% for c in categories %}
             <option value="{{ c.id }}">{{ c.name }}</option>
             {% endfor %}
           </select>
+        </div>
+        <div class="mb-3">
+          <label for="image" class="form-label">Image</label>
+          <input type="file" class="form-control" name="image" id="image"  />
         </div>
         <div class="mt-3">
           <button type="submit" class="btn btn-primary w-100">Post Wera</button>
@@ -44,7 +49,7 @@
     </div>
 
     <div class="col-md-6 p-4">
-      <h2 class="text-center mb-4">Weras</h2>
+      <p class="text-center mb-4 lead">Weras</p>
       {% if weras %} {% for w in weras %}
       <div class="col-lg-12 mb-4">
         <div
