--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -1,103 +1,70 @@
 {% extends 'wera/base.html' %} {% load static %} {% block content %}
 
-<div class="category_area pt-5">
-  <div class="">
-    <div class="row cat_search mb-4">
-      <!-- <form action="{% url 'search_wera' %}" method="get">
-        {% csrf_token %} -->
-      <div class="col-lg-9 col-md-4 mb-3">
-        <div class="single_input">
-          <input
-            type="text"
-            id="query"
-            name="query"
-            class="form-control"
-            placeholder="Search Keyword"
-          />
+<div class="category_area">
+  <!-- Job Listing Area -->
+  <div class="job_listing_area">
+    <div class="container">
+      <div class="job_lists">
+        <div class="d-lg-none">
+          <p class="lead">Home Feed</p>
+          <hr />
         </div>
-      </div>
-      <!-- <div class="col-lg-3 col-md-4 mb-3">
-        <div class="single_input">
-          <select class="form-select">
-            <option data-display="Location">Location</option>
-            {% for l in locations %}
-            <option value="{{ l.id }}" id="location" name="location">
-              {{ l.name }}
-            </option>
-            {% endfor %}
-          </select>
-        </div>
-      </div> -->
-      <!-- <div class="col-lg-3 col-md-4 mb-3">
-        <div class="single_input">
-          <select class="form-select">
-            <option data-display="Category">Category</option>
-            {% for c in categories %}
-            <option value="{{ c.id }}" id="category" name="category">
-              {{ c.name }}
-            </option>
-            {% endfor %}
-          </select>
-        </div>
-      </div> -->
-      <div class="col-lg-3 col-md-12 mb-3">
-        <div class="">
-          <button type="submit" class="btn btn-primary w-100">
-            <i class="bi bi-search-heart"></i> Search
-          </button>
-        </div>
-      </div>
-      <!-- </form> -->
-    </div>
-  </div>
-</div>
+        <div class="row">
+          {% for j in weras %}
+          <div class="col-lg-12 mb-4">
+            <div
+              class="single_jobs white-bg d-flex justify-content-between align-items-center shadow-sm p-4 rounded"
+            >
+              <div class="jobs_left d-flex align-items-center">
+                {% if j.image %}
+                <div class="thumb">
+                  <img
+                    src="{{ j.image }}"
+                    alt="{{ j.title }}"
+                    width="50"
+                    height="50"
+                    class="rounded-circle"
+                  />
+                </div>
+                {% endif %}
 
-<!-- Job Listing Area -->
-<div class="job_listing_area">
-  <div class="container">
-    <div class="job_lists">
-      <div class="row">
-        {% for j in weras %}
-        <div class="col-lg-12 mb-4">
-          <div
-            class="single_jobs white-bg d-flex justify-content-between align-items-center shadow-sm p-4 rounded"
-          >
-            <div class="jobs_left d-flex align-items-center">
-              <div class="jobs_content">
-                <a href="{% url 'wera_detail' j.pk %}">
-                  <h4 class="text-primary">{{ j.title }}</h4>
-                </a>
-                <div class="links_locat d-flex align-items-center mt-2">
-                  <div class="location me-4">
-                    <p class="m-0">
-                      <i class="bi bi-geo-alt"></i> {{ j.location }}
-                    </p>
-                  </div>
-                  <div class="category">
-                    <p class="m-0">
-                      <i class="bi bi-tags"></i> {{ j.category.name }}
-                    </p>
+                <div class="jobs_content">
+                  <a href="{% url 'wera_detail' j.pk %}">
+                    <h4 class="text-primary">{{ j.title }}</h4>
+                  </a>
+                  <div class="links_locat d-flex align-items-center mt-2">
+                    <div class="location me-4">
+                      <p class="m-0">
+                        <i class="bi bi-geo-alt"></i> {{ j.location }}
+                      </p>
+                    </div>
+                    <div class="category">
+                      <p class="m-0">
+                        <i class="bi bi-tags"></i> {{ j.category.name }}
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="jobs_right d-flex align-items-center">
-              <div class="apply_now me-3">
-                <a class="heart_mark" href="#"> <i class="bi bi-heart"></i> </a>
-              </div>
-              <div class="date">
-                <p class="text-muted">{{ j.created_at }}</p>
+              <div class="jobs_right d-flex align-items-center">
+                <div class="apply_now me-3">
+                  <a class="heart_mark" href="#">
+                    <i class="bi bi-heart"></i>
+                  </a>
+                </div>
+                <div class="date">
+                  <p class="text-muted">{{ j.created_at }}</p>
+                </div>
               </div>
             </div>
           </div>
+          {% endfor %}
         </div>
-        {% endfor %}
       </div>
     </div>
   </div>
-</div>
 
-<!-- <div class="top_companies_area py-5">
+  <!-- <div class="top_companies_area py-5">
   <div class="container">
     <div class="row align-items-center mb-40">
       <div class="col-lg-6 col-md-6">
@@ -135,5 +102,5 @@
     </div>
   </div>
 </div> -->
-
-{% endblock %}
+</div>
+  {% endblock %}
