fix: use db data on contact images

--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -11,7 +11,7 @@
     <div class="col-md-6 col-lg-4">
       <div class="card h-100 shadow-sm border-0">
         <img
-        src="{% static 'images/avatar.png' %}"
+        src="{{ profile.image }}"
           class="card-img-top rounded-circle"
           alt="{{ profile.name }}"
         />
