fix: footer size

--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -3436,7 +3436,7 @@
               <div class="footer_widget">
                 <h3>Category</h3>
                 <ul>
-                  {% for c in categories %}
+                  {% for c in footer_categories %}
                   <li><a href="#">{{ c.name }}</a></li>
                   {% endfor %}
                 </ul>
