--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -30,18 +30,18 @@
 
                 <div class="jobs_content">
                   <a href="{% url 'wera_detail' j.pk %}">
-                    <h4 class="text-primary">{{ j.title }}</h4>
+                    <p class="text-primary">{{ j.title }}</p>
                   </a>
                   <div class="links_locat d-flex align-items-center mt-2">
                     <div class="location me-4">
-                      <p class="m-0">
+                      <small class="m-0">
                         <i class="bi bi-geo-alt"></i> {{ j.location }}
-                      </p>
+                      </small>
                     </div>
                     <div class="category">
-                      <p class="m-0">
+                      <small class="m-0">
                         <i class="bi bi-tags"></i> {{ j.category.name }}
-                      </p>
+                      </small>
                     </div>
                   </div>
                 </div>
@@ -53,7 +53,7 @@
                   </a>
                 </div>
                 <div class="date">
-                  <p class="text-muted">{{ j.created_at }}</p>
+                  <small class="text-muted">{{ j.created_at }}</small>
                 </div>
               </div>
             </div>
