add google site verification

--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -3239,6 +3239,7 @@
 
     gtag("config", "G-TNP5GVGSDM");
   </script>
+  <meta name="google-site-verification" content="upiWnQCrcA2W_wkLtEPxSNzDKIAaBZQEeoDlPiMaX-M" />
   <body>
     <!-- header-start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-none d-lg-flex">
