--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -10,9 +10,16 @@
     <title>Wera</title>
     <meta name="description" content="Wera is a social job board" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Nobile:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <meta
+      name="google-site-verification"
+      content="upiWnQCrcA2W_wkLtEPxSNzDKIAaBZQEeoDlPiMaX-M"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Nobile:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -3239,7 +3246,6 @@
 
     gtag("config", "G-TNP5GVGSDM");
   </script>
-  <meta name="google-site-verification" content="upiWnQCrcA2W_wkLtEPxSNzDKIAaBZQEeoDlPiMaX-M" />
   <body>
     <!-- header-start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-none d-lg-flex">
@@ -3252,7 +3258,9 @@
             placeholder="Search"
             aria-label="Search"
           />
-          <button class="btn btn-outline-primary" type="submit"><i class="bi bi-search"></i> </button>
+          <button class="btn btn-outline-primary" type="submit">
+            <i class="bi bi-search"></i>
+          </button>
         </form>
         <button
           class="navbar-toggler"
@@ -3317,7 +3325,7 @@
                 href="{% url 'wera_create' %}"
                 class="nav-link btn text-white btn-dark btn-outline-light"
               >
-              <i class="bi bi-plus-circle"></i> Post Wera
+                <i class="bi bi-plus-circle"></i> Post Wera
               </a>
             </li>
           </ul>
