fix: change post form button

--- a/form_mtaani/templates/form_mtaani/create.html
+++ b/form_mtaani/templates/form_mtaani/create.html
@@ -47,7 +47,7 @@
           </div>
         </div>
         <div class="form-group mt-3">
-          <button type="submit" class="btn btn-primary w-100">Post Wera</button>
+          <button type="submit" class="btn btn-primary w-100">Post Form</button>
         </div>
       </form>
     </div>
