--- a/form_mtaani/templates/form_mtaani/index.html
+++ b/form_mtaani/templates/form_mtaani/index.html
@@ -4,13 +4,12 @@
   <div class="d-flex justify-content-between align-items-center mb-4">
     <p class="lead">Form Mtaani</p>
     <a href="{% url 'form_mtaani_create' %}" class="btn btn-primary"
-      >Toa form <i class="bi bi-arrow-right-short"></i></a
-    >
+      >Toa form <i class="bi bi-arrow-right-short"></i
+    ></a>
   </div>
-  <hr>
+  <hr />
 
   <div class="row g-4">
-    
     {% if form_mtaanis %} {% for j in form_mtaanis %}
     <div class="col-lg-12 mb-4">
       <div
@@ -18,9 +17,8 @@
       >
         <div class="jobs_left d-flex align-items-center">
           <div class="jobs_content">
-            <a href="{% url 'form_mtaani_detail' j.pk %}">
-              <p class="text-primary">{{ j.form }}</p>
-            </a>
+            <p class="text-primary">{{ j.form }}</p>
+
             <div class="links_locat d-flex align-items-center mt-2">
               <div class="location me-4">
                 <small class="m-0">
