--- a/wera/templates/wera/detail.html
+++ b/wera/templates/wera/detail.html
@@ -4,7 +4,7 @@
   {% if wera %}
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 mb-4">
+      <div class="col-lg-12 mb-4">
         <div class="job_details_header shadow-sm p-4 rounded bg-white">
           <div class="single_jobs d-flex justify-content-between">
             <div class="jobs_left d-flex align-items-center">
@@ -45,16 +45,16 @@
 
         <div class="descript_wrap mt-4 shadow-sm p-4 rounded bg-white">
           <div class="single_wrap">
-            <h4 class="text-primary">Description</h4>
+            <p class="fw-bold lead">Description</p>
             <p>{{ wera.description }}</p>
           </div>
         </div>
       </div>
 
-      <div class="col-lg-4 mb-4">
+      <div class="col-lg-12 mb-4">
         <div class="job_summary shadow-sm p-4 rounded bg-white">
           <div class="summary_header">
-            <h3 class="text-primary">Summary</h3>
+            <p class="fw-bold lead">Summary</p>
           </div>
           <div class="job_content">
             <ul class="list-unstyled">
