--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -1,6 +1,6 @@
 {% extends 'wera/base.html' %} {% load static %} {% block content %}
 
-<div class="category_area">
+<div class="category_area mb-4">
   <!-- Job Listing Area -->
   <div class="job_listing_area">
     <div class="container">
@@ -64,43 +64,7 @@
     </div>
   </div>
 
-  <!-- <div class="top_companies_area py-5">
-  <div class="container">
-    <div class="row align-items-center mb-40">
-      <div class="col-lg-6 col-md-6">
-        <div class="section_title">
-          <h3>Top Companies</h3>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6 text-end">
-        <div class="browse_job">
-          <a href="#" class="btn btn-outline-primary">Browse More</a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      {% for company in companies %}
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="single_company text-center p-4 border rounded shadow-sm">
-          <div class="thumb">
-            <img
-              src="{{ company.logo_url }}"
-              alt="{{ company.name }}"
-              class="img-fluid"
-            />
-          </div>
-          <a
-            href="{% url 'company_detail' company.id %}"
-            class="text-decoration-none"
-          >
-            <h3>{{ company.name }}</h3>
-          </a>
-          <p><span>{{ company.position_count }}</span> Available positions</p>
-        </div>
-      </div>
-      {% endfor %}
-    </div>
-  </div>
-</div> -->
+ 
 </div>
-  {% endblock %}
+
+{% endblock %}
