feat: Implement contact form and add legal pages

--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -1883,9 +1883,10 @@
             document.write(new Date().getFullYear());
           </script></small
         >
-        <small>Privacy Policy</small>
-        <small>Cookies Policy</small>
-        <small>Report a problem</small>
+        <small><a href="{%  url 'privacy_policy' %}">Privacy Policy</a></small>
+        <small><a href="{%  url 'cookie_policy' %}">Cookie Policy</a></small>
+        <small><a href="{%  url 'contact_me' %}">Report a problem</a></small>
+        <small><a href="{%  url 'advertising' %}">Advertising</a></small>
       </div>
     </footer>
     <script>
