--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -6,7 +6,7 @@
     <div class="container">
       <div class="job_lists">
         <div class="d-lg-none">
-          <p class="lead">Home Feed</p>
+          <p class="lead">Weras Feed</p>
           <hr />
         </div>
         <div class="row">
