--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -1885,7 +1885,7 @@
         >
         <small><a href="{%  url 'privacy_policy' %}">Privacy Policy</a></small>
         <small><a href="{%  url 'cookie_policy' %}">Cookie Policy</a></small>
-        <small><a href="{%  url 'contact_me' %}">Report a problem</a></small>
+        <small><a href="{%  url 'report_a_problem' %}">Report a problem</a></small>
         <small><a href="{%  url 'advertising' %}">Advertising</a></small>
       </div>
     </footer>
