--- a/wera/templates/wera/report_a_problem.html
+++ b/wera/templates/wera/report_a_problem.html
@@ -9,7 +9,7 @@
       <div class="col-lg-8">
         <form
           class="form-contact contact_form"
-          action="{% url 'contact_me' %}"
+          action="{% url 'report_a_problem' %}"
           method="post"
           id="contactForm"
           novalidate="novalidate"
