fix: custom pages for meta

--- a/form_mtaani/templates/form_mtaani/create.html
+++ b/form_mtaani/templates/form_mtaani/create.html
@@ -1,4 +1,4 @@
-{% extends 'wera/base.html' %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Post Form Mtaani {% endblock %}  {% block content %}
 <div class="d-flex container">
   <div class="row w-100">
     <!-- Form Column -->
