--- a/form_mtaani/templates/form_mtaani/detail.html
+++ b/form_mtaani/templates/form_mtaani/detail.html
@@ -1,4 +1,4 @@
-{% extends 'wera/base.html' %} {% block content %}
+{% extends 'wera/base.html' %}  {% block title %} Form Mtaani {% endblock %}  {% block content %}
 
 
 {% endblock %}
