--- a/wera/templates/wera/detail.html
+++ b/wera/templates/wera/detail.html
@@ -1,4 +1,4 @@
-{% extends 'wera/base.html' %} {% load static %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Wera {% endblock %}  {% load static %} {% block content %}
 
 <div class="job_details_area pt-5">
   {% if wera %}
