--- a/wera/templates/wera/error_500.html
+++ b/wera/templates/wera/error_500.html
@@ -1,4 +1,4 @@
-{% extends 'wera/base.html' %} {% load static %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Wera | 500 {% endblock %}  {% load static %} {% block content %}
 
 <div class="text-center pt-5">
   <p class="lead">Wera is currently unavailable</p>
