--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -1,4 +1,4 @@
-{% extends 'wera/base.html' %} {% load static %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Wera Feed {% endblock %}  {% load static %} {% block content %}
 
 <div class="category_area mb-4">
   <!-- Job Listing Area -->
