--- a/form_mtaani/templates/form_mtaani/index.html
+++ b/form_mtaani/templates/form_mtaani/index.html
@@ -1,8 +1,8 @@
-{% extends 'wera/base.html' %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Form Mtaani Feed {% endblock %}   {% block content %}
 
 <div class="container pt-2">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <p class="lead">Form Mtaani</p>
+    <p class="lead fw-bold">Form Mtaani Feed</p>
     <a href="{% url 'form_mtaani_create' %}" class="btn btn-primary"
       >Toa form <i class="bi bi-arrow-right-short"></i
     ></a>
