--- a/wera/templates/wera/advertising.html
+++ b/wera/templates/wera/advertising.html
@@ -1,3 +1,3 @@
-{% extends 'wera/base.html' %} {% load static %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Wera | Advertising{% endblock %} {% load static %} {% block content %}
 
 {% endblock %}
