--- a/wera/templates/wera/cookie_policy.html
+++ b/wera/templates/wera/cookie_policy.html
@@ -1,3 +1,3 @@
-{% extends 'wera/base.html' %} {% load static %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Wera | Cookie Policy {% endblock %} {% load static %} {% block content %}
 
 {% endblock %}
