--- a/wera/templates/wera/privacy_policy.html
+++ b/wera/templates/wera/privacy_policy.html
@@ -1,3 +1,3 @@
-{% extends 'wera/base.html' %} {% load static %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Wera | Privacy Policy {% endblock %}  {% load static %} {% block content %}
 
 {% endblock %}
