--- a/wera/templates/wera/report_a_problem.html
+++ b/wera/templates/wera/report_a_problem.html
@@ -1,4 +1,4 @@
-{% extends 'wera/base.html' %} {% block content %}
+{% extends 'wera/base.html' %} {% block title %} Wera | Report a problem {% endblock %}  {% block content %}
 
 <section class="contact-section section_padding">
   <div class="container">
