fix: google search

--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -8,10 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
     <meta name="description" content="Wera is a social job board" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="google-site-verification"
-      content="iR7w2Hn7SM_mz3PI0EkYZAQykNZnbOu_Phq4m12NNLs"
-    />
+    <meta name="google-site-verification" content="gq9EoTdpglAB0oAgeZgCsdiPlb2CuI_E1bvGWGi-C88" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -1869,8 +1866,7 @@
               update your profile.
             </div>
           </div>
-          {% endif %} {% endif %} {% if messages %} {% for message in messages
-          %}
+          {% endif %} {% endif %} {% if messages %} {% for message in messages %}
           <div class="pt-2">
             <div class="alert alert-info">{{ message }}</div>
           </div>
