--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -9,6 +9,9 @@
     <meta name="description" content="Wera is a social job board" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="gq9EoTdpglAB0oAgeZgCsdiPlb2CuI_E1bvGWGi-C88" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -61,6 +64,9 @@
       /* Tablet desktop :768px. */
       /* small mobile :320px. */
       /* Large Mobile :480px. */
+      body {
+        font-family: "Inter", serif !important;
+      }
 
       a {
         text-decoration: none !important;
