fix: slug detail page

--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -29,7 +29,7 @@
                 {% endif %}
 
                 <div class="jobs_content">
-                  <a href="{% url 'wera_detail' j.pk %}">
+                  <a href="{% url 'wera_detail' j.slug %}">
                     <p class="text-primary">{{ j.title }}</p>
                   </a>
                   <div class="links_locat d-flex align-items-center mt-2">
