--- a/form_mtaani/templates/form_mtaani/create.html
+++ b/form_mtaani/templates/form_mtaani/create.html
@@ -1,6 +1,6 @@
 {% extends 'wera/base.html' %} {% block title %} Post Form Mtaani {% endblock %}  {% block content %}
 <div class="d-flex container">
-  <div class="row w-100">
+  <div class="row">
     <!-- Form Column -->
     <div class="col-md-6 p-4">
       <h2 class="text-center mb-4">Tell others about a form in your mtaa</h2>
