--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -1863,7 +1863,7 @@
     </nav>
     <div class="container min-vh-100">
       <div class="d-flex justify-content-center align-items-center">
-        <div class="feed-container w-100" style="max-width: 600px">
+        <div class="feed-container w-100">
           {% if user.is_authenticated %} {% if not profile.phone %}
           <div class="pt-2">
             <div class="alert alert-warning">
