--- a/wera/templates/wera/create.html
+++ b/wera/templates/wera/create.html
@@ -1,7 +1,7 @@
 {% extends 'wera/base.html' %} {% block title %} Post Wera {% endblock %}  {% block content %}
 
 <div class="d-flex container">
-  <div class="row w-100">
+  <div class="row">
     <div class="col-md-6 p-4">
       <p class="text-center mb-4 lead">Posting a Wera with us is free</p>
       <form method="POST" action="{% url 'wera_create' %}"  enctype="multipart/form-data">
@@ -77,7 +77,7 @@
               <a class="heart_mark" href="#"> <i class="bi bi-heart"></i> </a>
             </div>
             <div class="date">
-              <p class="text-muted">{{ w.created_at }}</p>
+              <small class="text-muted" data-created-at="{{ w.created_at|date:'c' }}"></small>
             </div>
           </div>
         </div>
