refactor: improve UI

--- a/wera/templates/wera/index.html
+++ b/wera/templates/wera/index.html
@@ -11,9 +11,9 @@
         </div>
         <div class="row">
           {% for j in weras %}
-          <div class="col-lg-12 mb-4">
+          <div class="col-lg-12 mb-2">
             <div
-              class="single_jobs white-bg d-flex justify-content-between align-items-center shadow-sm p-4 rounded"
+              class="single_jobs white-bg d-flex justify-content-between align-items-center border p-4 rounded"
             >
               <div class="jobs_left d-flex align-items-center">
                 {% if j.image %}
