--- a/form_mtaani/templates/form_mtaani/create.html
+++ b/form_mtaani/templates/form_mtaani/create.html
@@ -1,9 +1,8 @@
 {% extends 'wera/base.html' %} {% block title %} Post Form Mtaani {% endblock %}  {% block content %}
-<div class="d-flex container">
+<div class="d-flex">
   <div class="row">
-    <!-- Form Column -->
     <div class="col-md-6 p-4">
-      <h2 class="text-center mb-4">Tell others about a form in your mtaa</h2>
+      <h2 class="text-center mb-4 lead">Tell others about a form in your mtaa</h2>
       <form method="post" action="{% url 'form_mtaani_create' %}">
         {% csrf_token %}
         <div class="row g-2">
@@ -57,14 +56,14 @@
       <h2 class="text-center mb-4">Form Mtaani</h2>
       {% if form_mtaanis %}
         {% for j in form_mtaanis %}
-        <div class="col-lg-12 mb-4">
+        <div class="col-lg-12 mb-2">
           <div
-            class="single_jobs white-bg d-flex justify-content-between align-items-center shadow-sm p-4 rounded"
+            class="single_jobs white-bg d-flex justify-content-between align-items-center border p-4 rounded"
           >
             <div class="jobs_left d-flex align-items-center">
               <div class="jobs_content">
                 <a href="{% url 'form_mtaani_detail' j.pk %}">
-                  <h4 class="text-primary">{{ j.form }}</h4>
+                  <p class="text-primary">{{ j.form }}</p>
                 </a>
                 <div class="links_locat d-flex align-items-center mt-2">
                   <div class="location me-4">
@@ -85,7 +84,7 @@
                 <a class="heart_mark" href="#"> <i class="bi bi-heart"></i> </a>
               </div>
               <div class="date">
-                <p class="text-muted">{{ j.created_at }}</p>
+            <small class="text-muted" data-created-at="{{ j.created_at|date:'c' }}"></small>
               </div>
             </div>
           </div>
