--- a/form_mtaani/templates/form_mtaani/index.html
+++ b/form_mtaani/templates/form_mtaani/index.html
@@ -9,16 +9,15 @@
   </div>
   <hr />
 
-  <div class="row g-4">
+  <div class="row">
     {% if form_mtaanis %} {% for j in form_mtaanis %}
-    <div class="col-lg-12 mb-4">
+    <div class="col-lg-12 mb-2">
       <div
-        class="single_jobs white-bg d-flex justify-content-between align-items-center shadow-sm p-4 rounded"
+        class="single_jobs white-bg d-flex justify-content-between align-items-center border p-4 rounded"
       >
         <div class="jobs_left d-flex align-items-center">
           <div class="jobs_content">
             <p class="text-primary">{{ j.form }}</p>
-
             <div class="links_locat d-flex align-items-center mt-2">
               <div class="location me-4">
                 <small class="m-0">
