--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="gq9EoTdpglAB0oAgeZgCsdiPlb2CuI_E1bvGWGi-C88" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -65,7 +65,10 @@
       /* small mobile :320px. */
       /* Large Mobile :480px. */
       body {
-        font-family: "Inter", serif !important;
+        font-family: "Roboto", serif !important;
+        font-optical-sizing: auto;
+        font-style: normal;
+        font-variation-settings: "wdth" 100;
       }
 
       a {
@@ -1730,7 +1733,7 @@
     gtag("config", "G-TNP5GVGSDM");
   </script>
   <body>
-    <!-- header-start -->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-none d-lg-flex">
       <div class="container">
         <a href="{% url 'home' %}" class="navbar-brand">Wera</a>
