--- a/wera/templates/wera/create.html
+++ b/wera/templates/wera/create.html
@@ -51,9 +51,9 @@
     <div class="col-md-6 p-4">
       <p class="text-center mb-4 lead">Weras</p>
       {% if weras %} {% for w in weras %}
-      <div class="col-lg-12 mb-4">
+      <div class="col-lg-12 mb-2">
         <div
-          class="single_jobs white-bg d-flex justify-content-between align-items-center shadow-sm p-4 rounded"
+          class="single_jobs white-bg d-flex justify-content-between align-items-center p-4 rounded border"
         >
           <div class="jobs_left d-flex align-items-center">
             <div class="jobs_content">
